@@ -1,3 +1,10 @@
+2005-04-04 13:59  antirez
+
+	* ChangeLog, jim-stdlib-1.0.tcl: [memoize] is now inside the Jim
+	  Standard Library! More info here: http://wiki.tcl.tk/10981 Our
+	  version uses a static var to take state instead of a global var,
+	  for the rest it is the same.
+
 2005-04-04 10:01  antirez
 
 	* ChangeLog, jim.h: Version marked as "0.51".
